# g1-deploy

./: .gitignore  CMakeLists.txt  pyproject.toml  readme.md  requirements.txt
cfg/: config.yaml  loco.yaml  loco_body.yaml  locomode.yaml  policy-1781wsjf-final.yaml  test.yaml
checkpoints/: policy-01-05_10-56.onnx  policy-01-06_12-38.onnx
cpp/: main.cpp  python_bindings.cpp  robot_interface.hpp
mjcf/: g1.xml  g1_with_floor.xml
python/: observation.py  play.py  play_rerun.py  policy.py  rerun_server.py  test_fsm.py  test_gamepad.py
python/utils/: __init__.py  math.py  string.py  visualization.py
src/: main.cpp  play.py  play_why.py  python_bindings.cpp  rerun_server.py  robot_interface.hpp  test_fsm.py  test_gamepad.py  vis_data.py
src/g1_deploy/: __init__.py  _observation.py  base.py  observation.py  policy.py  ref_motion.py
src/g1_deploy/commands/: __init__.py  ref_motion.py
src/g1_deploy/observations/: __init__.py  obs_body.py  obs_joint.py  obs_motion.py
src/g1_deploy/utils/: __init__.py  constants.py  math.py  motion.py  visualization.py
